# MIPT-PROGRAMMING

./: .gitignore  README.md
ACOS/: README.md  README.md~
ACOS/archivator/: archivator.c
ACOS/conveer/: main.c
ACOS/eratosphen/: erastosphen.c
ACOS/exec/: exec.c
ACOS/grep/: grep10.c
ACOS/http-server/: main.c  support_commands.c  support_commands.h
ACOS/ls-lR/: ls-lR.c
ACOS/server/: client.c  server.c
ACOS/shell/: args.c  args.h  get_line.c  get_line.h  result  shell.c
ACOS/strings/: strings.c
ACOS/wc/: wc.c
Algo-and-DS/: README.md
Algo-and-DS/barrier/: CMakeLists.txt  barrier.h
Algo-and-DS/lock_free_queue/: CMakeLists.txt  lock_free_queue.h  main.cpp
Algo-and-DS/thread_pool/: CMakeLists.txt  main.cpp  par_sort_vas.h  parallel_sort.h  thread_pool.h  thread_safe_queue.h  thread_vas.h
Algorithms-and-DS/: README.md
Algorithms-and-DS/Tournament_tree_mutex/: tree_mutex.h
Algorithms_and_DS-3sem/: README.md
Algorithms_and_DS-3sem/Tournament_tree_mutex/: CMakeLists.txt  main.cpp
DataBases/: README.md  README.md~
DataBases/BASE/: NAME.TXT  NAME.TXT~  SCRIPT.SQL~  (+2 more)
Discrete-Opt/: README.md  coding-hometask-1.ipynb  coding-hometask-2-1.ipynb
Formal-Lang/: CMakeLists.txt  README.md  main.cpp  practical_task.tex
Formal-languages/: README.md
Func-Prog/: README.md
Java/: README.md
Math-Stat/: README.md
OOP/: README.md
OOP/IGraph/: CArcGraph.cpp  CArcGraph.h  CListGraph.cpp  CListGraph.h  CMakeLists.txt  CMatrixGraph.h  CSetGraph.cpp  CSetGraph.h  IGraph.h  README.md  main.cpp
Parallel-Algo/: README.md
Physics-Labs/: README.md
(+310 files in other folders)
